--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,25 @@
+@import url(https://fonts.googleapis.com/css?family=Share+Tech:regular);
+
 @import 'tailwindcss';
+
+@theme {
+    --color-primary: #1b1b1b;
+    --color-secondary: #80e0d5;
+    --color-tertiary: #333;
+}
+
+@layer components {
+    .underline-secondary {
+        @apply relative after:content-[''] after:bg-secondary after:w-0 after:h-px after:absolute after:bottom-0 after:left-0 
+                after:transition-[width] after:duration-300 after:ease-in-out;
+    }
+
+    .drop-shadow-secondary {
+        @apply  transition-shadow duration-300 ease-in-out hover:drop-shadow-[0_0_0.75rem_var(--color-secondary)];
+    }
+}
+
+body {
+    background-color: var(--color-primary);
+    font-family: 'Share Tech';
+}
