--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Share+Tech:regular);
-
 @import 'tailwindcss';
 
 @theme {
@@ -23,9 +21,27 @@
     }
 }
 
+@font-face {
+    font-family: 'Courier Prime Code';
+    src: url('./fonts/Courier Prime Code.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Courier Prime Code';
+    src: url('./fonts/Courier Prime Code Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+* {
+    letter-spacing: -2;
+}
+
 body {
     background-color: var(--color-primary);
-    font-family: 'Share Tech';
+    font-family: 'Courier Prime Code';
 }
 
 a {
