Fix header active link functionality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,10 @@
     letter-spacing: -2;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--color-primary);
     font-family: 'Courier Prime Code';
